# learn-gobject-rust

./: .buildconfig  Cargo.toml
src/: main.rs
