[package]
name = "gobject-subclass-test"
version = "0.1.0"
authors = ["Farzeen <12694111+thefzsalam@users.noreply.github.com>"]

[dependencies]
gtk-sys = "0.6.0"
gobject-sys = "0.6.0"
glib-sys = "0.6.0"
gio-sys = "0.6.0"
glib = "0.5.0"
libc = "0.2.40"

[dependencies.gtk]
version = "0.4.0"
features = ["v3_16"]

